; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bnx2x/extr_bnx2x_link.c_bnx2x_set_cfg_pin.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bnx2x/extr_bnx2x_link.c_bnx2x_set_cfg_pin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bnx2x = type { i32 }

@PIN_CFG_NA = common dso_local global i64 0, align 8
@PIN_CFG_EPIO0 = common dso_local global i64 0, align 8
@PIN_CFG_GPIO0_P0 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bnx2x*, i64, i64)* @bnx2x_set_cfg_pin to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bnx2x_set_cfg_pin(%struct.bnx2x* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct.bnx2x*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store %struct.bnx2x* %0, %struct.bnx2x** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %9 = load i64, i64* %5, align 8
  %10 = load i64, i64* @PIN_CFG_NA, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %12, label %13

12:                                               ; preds = %3
  br label %38

13:                                               ; preds = %3
  %14 = load i64, i64* %5, align 8
  %15 = load i64, i64* @PIN_CFG_EPIO0, align 8
  %16 = icmp sge i64 %14, %15
  br i1 %16, label %17, label %24

17:                                               ; preds = %13
  %18 = load %struct.bnx2x*, %struct.bnx2x** %4, align 8
  %19 = load i64, i64* %5, align 8
  %20 = load i64, i64* @PIN_CFG_EPIO0, align 8
  %21 = sub nsw i64 %19, %20
  %22 = load i64, i64* %6, align 8
  %23 = call i32 @bnx2x_set_epio(%struct.bnx2x* %18, i64 %21, i64 %22)
  br label %38

24:                                               ; preds = %13
  %25 = load i64, i64* %5, align 8
  %26 = load i64, i64* @PIN_CFG_GPIO0_P0, align 8
  %27 = sub nsw i64 %25, %26
  %28 = and i64 %27, 3
  store i64 %28, i64* %7, align 8
  %29 = load i64, i64* %5, align 8
  %30 = load i64, i64* @PIN_CFG_GPIO0_P0, align 8
  %31 = sub nsw i64 %29, %30
  %32 = ashr i64 %31, 2
  store i64 %32, i64* %8, align 8
  %33 = load %struct.bnx2x*, %struct.bnx2x** %4, align 8
  %34 = load i64, i64* %7, align 8
  %35 = load i64, i64* %6, align 8
  %36 = load i64, i64* %8, align 8
  %37 = call i32 @bnx2x_set_gpio(%struct.bnx2x* %33, i64 %34, i64 %35, i64 %36)
  br label %38

38:                                               ; preds = %12, %24, %17
  ret void
}

declare dso_local i32 @bnx2x_set_epio(%struct.bnx2x*, i64, i64) #1

declare dso_local i32 @bnx2x_set_gpio(%struct.bnx2x*, i64, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
